Replace animated background to fix scrollbar

--- a/index.css
+++ b/index.css
@@ -12,6 +12,7 @@ html, body {
     height: 100%;
     font-family: 'Poppins', sans-serif;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 /* Presentation */
@@ -259,107 +260,34 @@ h2 {
     animation: coucou 10s ease-in-out infinite 1.5s;
 }
 
-/* Css background inspired from https://codepen.io/weenabeana/pen/yRMwGY */
+/* Css background inspired by https://codepen.io/chris22smith/pen/RZogMa */
 
-body {
-    background: -moz-linear-gradient(45deg, #eeeeee 0%, #c4c1f1 29%, #ffffff 66%, #a7e4fa 100%);
-    background: -webkit-linear-gradient(45deg, #eeeeee 0%,#c4c1f1 29%,#ffffff 66%,#a7e4fa 100%);
-    background: linear-gradient(45deg, #eeeeee 0%,#c4c1f1 29%,#ffffff 66%,#a7e4fa 100%);
-    background-size: 400% 400%;
-    -webkit-animation: Gradient 15s ease infinite;
-	-moz-animation: Gradient 15s ease infinite;
-	animation: Gradient 15s ease infinite;
-	overflow-x: hidden;
+@keyframes slide {
+    0% {
+        transform:translateX(-25%);
+    }
+    100% {
+        transform:translateX(25%);
+    }
 }
 
-body::before, 
-body::after {
-	content: "";
-	width: 70vmax;
-	height: 70vmax;
-	position: absolute;
-	background: rgba(255, 255, 255, 0.07);
-	left: -20vmin;
-	top: -20vmin;
-	animation: morph 15s linear infinite alternate, spin 20s linear infinite;
-	z-index: 1;
-	will-change: border-radius, transform;
-	transform-origin: 55% 55%;
-	pointer-events: none; 
+.bg {
+    animation: slide 6s ease-in-out infinite alternate;
+    background-image: linear-gradient(-60deg, rgb(191, 196, 227) 50%, rgb(199, 222, 244) 50%);
+    bottom:0;
+    left:-50%;
+    opacity:.5;
+    position:fixed;
+    right:-50%;
+    top:0;
+    z-index:-1;
 }
-	
-body::after {
-    width: 70vmin;
-    height: 70vmin;
-    left: auto;
-    right: -10vmin;
-    top: auto;
-    bottom: 0;
-    animation: morph 10s linear infinite alternate, spin 26s linear infinite reverse;
-    transform-origin: 20% 20%; 
+  
+.bg2 {
+    animation-direction:alternate-reverse;
+    animation-duration: 8s;
 }
-
-@-webkit-keyframes Gradient {
-	0% {
-		background-position: 0 50%
-	}
-	50% {
-		background-position: 100% 50%
-	}
-	100% {
-		background-position: 0 50%
-	}
+  
+.bg3 {
+    animation-duration: 10s;
 }
-
-@-moz-keyframes Gradient {
-	0% {
-		background-position: 0 50%
-	}
-	50% {
-		background-position: 100% 50%
-	}
-	100% {
-		background-position: 0 50%
-	}
-}
-
-@keyframes Gradient {
-	0% {
-		background-position: 0 50%
-	}
-	50% {
-		background-position: 100% 50%
-	}
-	100% {
-		background-position: 0 50%
-	}
-}
-
-@keyframes morph {
-  0% {
-    border-radius: 40% 60% 60% 40% / 70% 30% 70% 30%; }
-  100% {
-    border-radius: 40% 60%; } 
-}
-
-@keyframes spin {
-  to {
-    transform: rotate(1turn); 
-  } 
-}
-	.st0{display:none;}
-	.st1{display:inline;}
-	.st2{opacity:0.29;}
-	.st3{fill:#FFFFFF;}
-	.st4{clip-path:url(#SVGID_2_);fill:#FFFFFF;}
-	.st5{clip-path:url(#SVGID_4_);}
-	.st6{clip-path:url(#SVGID_6_);}
-	.st7{clip-path:url(#SVGID_8_);}
-	.st8{clip-path:url(#SVGID_10_);}
-	.st9{fill:none;}
-	.st10{clip-path:url(#SVGID_12_);}
-	.st11{opacity:0.7;}
-	.st12{clip-path:url(#SVGID_14_);}
-	.st13{opacity:0.2;}
-	.st14{clip-path:url(#SVGID_16_);}
-	.st15{opacity:0.3;fill:#FFFFFF;enable-background:new    ;}
